school-system/src/main/java/com/example/school/system/error/SchoolResourceNotFoundExceptionHandler.java
package com.example.school.system.error;

public class SchoolResourceNotFoundExceptionHandler extends RuntimeException {
    public SchoolResourceNotFoundExceptionHandler(String message) {
        super(message);
    }

}
